--- a/index.html
+++ b/index.html
@@ -21,5 +21,16 @@
         <li><a href="tel:+48111111111">+48 111 111 111</a></li>
       </ul>
     </header>
+
+    <footer>
+      <a href="index.html" title="Strona główna">WebStudio</a>
+      <address>
+        <ul>
+          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
