--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
       </ul>
     </header>
 
+    <main>
+      <!-- HERO -->
+      <section>
+        <div>
+          <h1>Efektywne rozwiązania dla waszego biznesu</h1>
+          <button type="button">Zamów usługę</button>
+        </div>
+      </section>
+      <!-- /HERO -->
+    </main>
+
     <footer>
       <a href="index.html" title="Strona główna">WebStudio</a>
       <address>
