Create main tag > section advantages

--- a/index.html
+++ b/index.html
@@ -31,6 +31,41 @@
         </div>
       </section>
       <!-- /HERO -->
+
+      <!-- ADVANTAGES -->
+      <section>
+        <ul>
+          <li>
+            <h3>Lorem, ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales ui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h3>Lorem, ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales ui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h3>Lorem, ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales ui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h3>Lorem, ipsum</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales ui. Interdum et malesuada
+            </p>
+          </li>
+        </ul>
+      </section>
+      <!-- /ADVANTAGES -->
     </main>
 
     <footer>
