--- a/index.html
+++ b/index.html
@@ -66,6 +66,43 @@
         </ul>
       </section>
       <!-- /ADVANTAGES -->
+
+      <!-- WHAT WE DOING -->
+      <section>
+        <div>
+          <h2>Czym się zajmujemy</h2>
+          <ul>
+            <li>
+              <img
+                src="images/work1.jpg"
+                width="370"
+                height="294"
+                alt="Tworzenie aplikacji - foto"
+                title="Tworzenie aplikacji"
+              />
+            </li>
+            <li>
+              <img
+                src="images/work2.jpg"
+                width="370"
+                height="294"
+                alt="Testowanie aplikacji na telefonie - foto"
+                title="Testowanie aplikacji na telefonie"
+              />
+            </li>
+            <li>
+              <img
+                src="images/work3.jpg"
+                width="370"
+                height="294"
+                alt="Projektowanie grafiki - foto"
+                title="Projektowanie grafiki"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- /WHAT WE DOING -->
     </main>
 
     <footer>
