--- a/index.html
+++ b/index.html
@@ -103,6 +103,52 @@
         </div>
       </section>
       <!-- /WHAT WE DOING -->
+
+      <!-- TEAM -->
+      <section>
+        <div>
+          <h2>Nasz zespół</h2>
+          <ul>
+            <li>
+              <figure>
+                <img src="images/team1.jpg" width="270" height="260" alt="John Doe" />
+                <figcaption>
+                  <h3>John Doe</h3>
+                  <p>Product Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/team2.jpg" width="270" height="260" alt="John Doe" />
+                <figcaption>
+                  <h3>John Doe</h3>
+                  <p>Frontend Developer</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/team3.jpg" width="270" height="260" alt="John Doe" />
+                <figcaption>
+                  <h3>John Doe</h3>
+                  <p>Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li>
+              <figure>
+                <img src="images/team4.jpg" width="270" height="260" alt="John Doe" />
+                <figcaption>
+                  <h3>John Doe</h3>
+                  <p>UI Designer</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- /TEAM -->
     </main>
 
     <footer>
