--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           <li><a href="#">Kontakt</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-      </ul>
+      <div>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
+      </div>
     </header>
 
     <main>
@@ -74,7 +74,7 @@
           <ul>
             <li>
               <img
-                src="images/work1.jpg"
+                src="images/create_application.jpg"
                 width="370"
                 height="294"
                 alt="Tworzenie aplikacji - foto"
@@ -83,7 +83,7 @@
             </li>
             <li>
               <img
-                src="images/work2.jpg"
+                src="images/test_application.jpg"
                 width="370"
                 height="294"
                 alt="Testowanie aplikacji na telefonie - foto"
@@ -92,7 +92,7 @@
             </li>
             <li>
               <img
-                src="images/work3.jpg"
+                src="images/graphic_design.jpg"
                 width="370"
                 height="294"
                 alt="Projektowanie grafiki - foto"
@@ -111,7 +111,7 @@
           <ul>
             <li>
               <figure>
-                <img src="images/team1.jpg" width="270" height="260" alt="John Doe" />
+                <img src="images/product_designer.jpg" width="270" height="260" alt="John Doe" />
                 <figcaption>
                   <h3>John Doe</h3>
                   <p>Product Designer</p>
@@ -120,7 +120,7 @@
             </li>
             <li>
               <figure>
-                <img src="images/team2.jpg" width="270" height="260" alt="John Doe" />
+                <img src="images/frontend_developer.jpg" width="270" height="260" alt="John Doe" />
                 <figcaption>
                   <h3>John Doe</h3>
                   <p>Frontend Developer</p>
@@ -129,7 +129,7 @@
             </li>
             <li>
               <figure>
-                <img src="images/team3.jpg" width="270" height="260" alt="John Doe" />
+                <img src="images/marketing.jpg" width="270" height="260" alt="John Doe" />
                 <figcaption>
                   <h3>John Doe</h3>
                   <p>Marketing</p>
@@ -138,7 +138,7 @@
             </li>
             <li>
               <figure>
-                <img src="images/team4.jpg" width="270" height="260" alt="John Doe" />
+                <img src="images/ui_designer.jpg" width="270" height="260" alt="John Doe" />
                 <figcaption>
                   <h3>John Doe</h3>
                   <p>UI Designer</p>
@@ -154,11 +154,9 @@
     <footer>
       <a href="index.html" title="Strona główna">WebStudio</a>
       <address>
-        <ul>
-          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-        </ul>
+        <span>m. Warszawa, Aleje Jerozolimskie 21</span>
+        <a href="mailto:info@example.com">info@example.com</a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
       </address>
     </footer>
   </body>
